--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^15.2.10"
   },
-  "trustedDependencies": ["@biomejs/biome"],
+  "trustedDependencies": ["@biomejs/biome", "esbuild", "sharp"],
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
