chore(vscode launch): updated vscode launch to run dev and preview servers

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,10 +2,27 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "command": "./node_modules/.bin/astro dev",
+      "command": "bun dev",
       "name": "Development server",
       "request": "launch",
-      "type": "node-terminal"
+      "type": "node-terminal",
+      "serverReadyAction": {
+        "action": "openExternally",
+        "pattern": "http://localhost:4321",
+        "uriFormat": "http://localhost:4321"
+      }
+    },
+    {
+      "command": "bun start",
+      "name": "Preview Production server",
+      "request": "launch",
+      "type": "node-terminal",
+      "serverReadyAction": {
+        "action": "openExternally",
+        "pattern": "https://localhost:4321",
+        "uriFormat": "http://localhost:4321"
+      },
+      "preLaunchTask": "bun: build"
     }
   ]
 }
