feat(dependencies, renovate): updated dependencies and renovate config

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,18 +1,9 @@
 {
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:recommended", ":dependencyDashboard"],
-  "schedule": ["every weekend"],
+  "schedule": ["0 12 * * SUN"],
+  "automergeSchedule": ["* * * * *"],
   "packageRules": [
-    {
-      "matchPackageNames": [
-        "next",
-        "react",
-        "react-dom",
-        "@types/react",
-        "@types/react-dom"
-      ],
-      "matchUpdateTypes": ["major"],
-      "enabled": false
-    },
     {
       "matchUpdateTypes": ["minor", "patch"],
       "automerge": true
