--- a/package.json
+++ b/package.json
@@ -12,18 +12,18 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@astrojs/node": "^9.0.0",
-    "@astrojs/react": "^4.1.3",
+    "@astrojs/node": "^9.0.2",
+    "@astrojs/react": "^4.2.0",
     "@astrojs/sitemap": "^3.2.1",
-    "@astrojs/tailwind": "^5.1.4",
     "@digi4care/astro-google-tagmanager": "^1.4.0",
     "@playform/compress": "^0.1.7",
-    "astro": "^5.1.5",
+    "@tailwindcss/vite": "^4.0.1",
+    "astro": "^5.2.1",
     "astro-analytics": "^2.7.0",
     "astro-compressor": "^1.0.0",
     "astro-devtool-breakpoints": "^0.3.0",
-    "astro-favicons": "^3.1.4",
-    "astro-font": "^0.1.81",
+    "astro-favicons": "^3.1.5",
+    "astro-font": "^1.0.0",
     "astro-healthcheck-ts": "^1.0.2",
     "astro-icon": "^1.1.5",
     "astro-lenis": "^1.0.0",
@@ -31,21 +31,21 @@
     "astro-meta-tags": "^0.3.1",
     "astro-robots-txt": "^1.0.0",
     "astro-seo": "^0.8.4",
-    "astro-vtbot": "^2.0.3",
-    "lenis": "^1.1.19",
+    "astro-vtbot": "^2.0.5",
+    "lenis": "^1.1.20",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sharp": "^0.33.5",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^4.0.1"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@types/bun": "^1.1.16",
-    "@types/react": "^19.0.6",
+    "@types/bun": "^1.2.1",
+    "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "cz-conventional-changelog": "^3.3.0",
     "husky": "^9.1.7",
-    "lint-staged": "^15.3.0"
+    "lint-staged": "^15.4.3"
   },
   "trustedDependencies": ["@biomejs/biome", "esbuild", "sharp"],
   "config": {
